@@ -6,6 +6,7 @@ Unreleased
   * Breaking change: get/set_tag_long() are renamed get/set_tag_numeric().
   * Breaking change: get/set_exif_tag_rational() renamed get/set_tag_rational().
   * Breaking change: get/set_tag_long() now operate on i32 values, not i64.
+  * Breaking change: Errors are now wrapped in a new rexiv2::Rexiv2Error type.
 
 2016-03-30 - v0.3.3
   * Dependency cleanup: removed rustc-serialize & bumped gexiv2-sys.
